arquvos antigos/Linguagem de Programação I (2 Semestre)/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo
-d
C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\doc
-encoding
UTF-8
-charset
UTF-8
C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\Algoritmo.java
<---- end of javadoc command ---->
Loading source file C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\Algoritmo.java...
C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\Algoritmo.java:58: error: not a statement
            binario[] = complementoDeDois(binario[]);
                   ^
C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\Algoritmo.java:58: error: ';' expected
            binario[] = complementoDeDois(binario[]);
                     ^
C:\Programação\Trabalhos\Algoritmo de Booth\Algoritmo\Algoritmo.java:58: error: '.class' expected
            binario[] = complementoDeDois(binario[]);
                                                   ^
3 errors
